--- a/java/res/values-en-rAL/donottranslate-keymap.xml
+++ b/java/res/values-en-rAL/donottranslate-keymap.xml
@@ -55,7 +55,7 @@
   
   <string name="key_ae07_main">7</string>
   <string name="key_ae07_shift">&amp;</string>
-  <string name="key_ae07_alt">\>⊖</string>
+    <string name="key_ae07_alt">&gt;⊖</string>
   
   <string name="key_ae08_main">8</string>
   <string name="key_ae08_shift">*</string>
