--- a/java/res/values-en-rAL/donottranslate-altchars.xml
+++ b/java/res/values-en-rAL/donottranslate-altchars.xml
@@ -18,7 +18,7 @@
 */
 
 
-other chars: ⊗⊙⌾⍇⍁⍂⌻⌼⍃⍄⍅⍆⍈⍊⍌⍍⍏⍐⍑⍓⍔⍖⍗⍯⍘⍚⍛⍜⍠⍡∞‽√ϼ∍⋾
+other chars: ⊗⊙⌾⍇⍁⍂⌻⌼⍃⍄⍅⍆⍈⍊⍌⍍⍏⍐⍑⍓⍔⍖⍗⍯⍘⍚⍛⍜⍡∞‽√ϼ∍⋾
 
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
