fix surrogate pairs, kill emojis, per-layout compact versions

--- a/app/src/main/res/values-en-rBQ/donottranslate-altchars.xml
+++ b/app/src/main/res/values-en-rBQ/donottranslate-altchars.xml
@@ -20,30 +20,51 @@
 
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="alternates_for_a"> ⍉↖ </string>
-    <string name="alternates_for_b"> ⌊⌈ </string>
-    <string name="alternates_for_c"> ↓ </string>
-    <string name="alternates_for_d"> ↕ </string>
-    <string name="alternates_for_e"> ∊⍷ </string>
-    <string name="alternates_for_f"> 𝕗𝔽 </string>
-    <string name="alternates_for_g"> 𝕘𝔾 </string>
-    <string name="alternates_for_h"> ⊸« </string>
-    <string name="alternates_for_i"> ⊏⊑ </string>
-    <string name="alternates_for_j"> ∘ </string>
-    <string name="alternates_for_k"> ○⌾ </string>
-    <string name="alternates_for_l"> ⟜» </string>
-    <string name="alternates_for_m"> ≡≢ </string>
-    <string name="alternates_for_n">  </string>
-    <string name="alternates_for_o"> ⊐⊒ </string>
-    <string name="alternates_for_p"> π⍳ </string>
-    <string name="alternates_for_q"> ⌽↙ </string>
-    <string name="alternates_for_r"> ↑𝕣 </string>
-    <string name="alternates_for_s"> 𝕤𝕊 </string>
-    <string name="alternates_for_t"> ∧⍋ </string>
-    <string name="alternates_for_u"> ⊔ </string>
-    <string name="alternates_for_v"> ∨⍒ </string>
-    <string name="alternates_for_w"> 𝕨𝕎 </string>
-    <string name="alternates_for_x"> 𝕩𝕏 </string>
-    <string name="alternates_for_y">  </string>
-    <string name="alternates_for_z"> ⥊ </string>
+    <string name="alternates_for_backtick" >˜¬</string>
+    <string name="alternates_for_dash" >÷√</string>
+    <string name="alternates_for_semicolon" >⋄·</string>
+    <string name="alternates_for_equal" >×⋆</string>
+    <string name="alternates_for_l_bracket" >←⊣</string>
+    <string name="alternates_for_r_bracket" >→⊢</string>
+    <string name="alternates_for_1">`˘⎉˜</string>
+    <string name="alternates_for_2">~¬¨⚇</string>
+    <string name="alternates_for_3">-⁼⍟</string>
+    <string name="alternates_for_4">_⌜</string>
+    <string name="alternates_for_5">=´⊘</string>
+    <string name="alternates_for_6">+˝⎊</string>
+    <string name="alternates_for_7">{¯⍎</string>
+    <string name="alternates_for_8">}∞⍕</string>
+    <string name="alternates_for_9">[¯⟨←⊣</string>
+    <string name="alternates_for_0">]•⟩→⊢</string>
+    <string name="alternates_for_quote">|↩˙</string>
+    <string name="alternates_for_comma">≤;∾</string>
+    <string name="alternates_for_dot">≥:⋄·</string>
+    <string name="alternates_for_slash">\\≠⇐</string>
+    
+    <string name="alternates_for_a">⍉↖</string>
+    <string name="alternates_for_b">⌊⌈</string>
+    <string name="alternates_for_c">↓</string>
+    <string name="alternates_for_d">↕</string>
+    <string name="alternates_for_e">∊⍷</string>
+    <string name="alternates_for_f">𝕗𝔽</string>
+    <string name="alternates_for_g">𝕘𝔾</string>
+    <string name="alternates_for_h">⊸«</string>
+    <string name="alternates_for_i">⊏⊑</string>
+    <string name="alternates_for_j">∘</string>
+    <string name="alternates_for_k">○⌾</string>
+    <string name="alternates_for_l">⟜»</string>
+    <string name="alternates_for_m">≡≢</string>
+    <string name="alternates_for_n"></string>
+    <string name="alternates_for_o">⊐⊒</string>
+    <string name="alternates_for_p">π⍳</string>
+    <string name="alternates_for_q">⌽↙</string>
+    <string name="alternates_for_r">↑𝕣</string>
+    <string name="alternates_for_s">𝕤𝕊</string>
+    <string name="alternates_for_t">∧⍋</string>
+    <string name="alternates_for_u">⊔</string>
+    <string name="alternates_for_v">∨⍒</string>
+    <string name="alternates_for_w">𝕨𝕎</string>
+    <string name="alternates_for_x">𝕩𝕏</string>
+    <string name="alternates_for_y"></string>
+    <string name="alternates_for_z">⥊</string>
 </resources>
