add some missing chars

--- a/app/src/main/res/values-en-rBQ/donottranslate-altchars.xml
+++ b/app/src/main/res/values-en-rBQ/donottranslate-altchars.xml
@@ -29,7 +29,7 @@
     <string name="alternates_for_1">`˘⎉˜</string>
     <string name="alternates_for_2">~¬¨⚇</string>
     <string name="alternates_for_3">-⁼⍟</string>
-    <string name="alternates_for_4">_⌜</string>
+    <string name="alternates_for_4">_⌜◶</string>
     <string name="alternates_for_5">=´⊘</string>
     <string name="alternates_for_6">+˝⎊</string>
     <string name="alternates_for_7">{¯⍎</string>
@@ -38,7 +38,7 @@
     <string name="alternates_for_0">]•⟩→⊢</string>
     <string name="alternates_for_quote">|↩˙</string>
     <string name="alternates_for_comma">≤;∾</string>
-    <string name="alternates_for_dot">≥:⋄·</string>
+    <string name="alternates_for_dot">≥:⋄·≍</string>
     <string name="alternates_for_slash">\\≠⇐</string>
     
     <string name="alternates_for_a">⍉↖</string>
@@ -54,7 +54,7 @@
     <string name="alternates_for_k">○⌾</string>
     <string name="alternates_for_l">⟜»</string>
     <string name="alternates_for_m">≡≢</string>
-    <string name="alternates_for_n"></string>
+    <string name="alternates_for_n">‿</string>
     <string name="alternates_for_o">⊐⊒</string>
     <string name="alternates_for_p">π⍳</string>
     <string name="alternates_for_q">⌽↙</string>
