--- a/app/src/main/res/values-en-rBQ/donottranslate-keymap.xml
+++ b/app/src/main/res/values-en-rBQ/donottranslate-keymap.xml
@@ -47,7 +47,7 @@
   
   <string name="key_ae04_main">4</string>
   <string name="key_ae04_shift">$</string>
-  <string name="key_ae04_alt">⌜</string>
+  <string name="key_ae04_alt">⌜◶</string>
   
   <string name="key_ae05_main">5</string>
   <string name="key_ae05_shift">%</string>
